--- a/src/app/gifs/pages/gif-history/gif-history.component.html
+++ b/src/app/gifs/pages/gif-history/gif-history.component.html
@@ -1,2 +1,5 @@
-<p>gif-history works!</p>
-<h2>{{ query() }}</h2>
+<h3 class="text-2xl font-bold mt4">Mostrando:{{ query() }}</h3>
+<hr />
+<section class="py-5">
+  <gift-list [gift]="gifsByKey()" />
+</section>
